--- a/.rvmrc
+++ b/.rvmrc
@@ -6,10 +6,10 @@
 # First we specify our desired <ruby>[@<gemset>], the @gemset name is optional,
 # Only full ruby name is supported here, for short names use:
 #     echo "rvm use 1.9.3" > .rvmrc
-environment_id="ruby-1.9.3-p484@nsattrib-string-sample"
+environment_id="ruby-1.9.3@NSAttributedStringDemo"
 
 # Uncomment the following lines if you want to verify rvm version per project
-# rvmrc_rvm_version="1.25.0 (stable)" # 1.10.1 seems like a safe start
+# rvmrc_rvm_version="1.22.1 (stable)" # 1.10.1 seems like a safe start
 # eval "$(echo ${rvm_version}.${rvmrc_rvm_version} | __rvm_awk -F. '{print "[[ "$1*65536+$2*256+$3" -ge "$4*65536+$5*256+$6" ]]"}' )" || {
 #   echo "This .rvmrc file requires at least RVM ${rvmrc_rvm_version}, aborting loading."
 #   return 1
@@ -33,7 +33,7 @@ then
   if (( ${rvm_use_flag:=1} >= 2 )) # display only when forced
   then
     if [[ $- == *i* ]] # check for interactive shells
-    then printf "%b" "Using: $(tput setaf 2 2>/dev/null)$GEM_HOME$(tput sgr0 2>/dev/null)
+    then printf "%b" "Using: \E[32m$GEM_HOME\E[0m
 " # show the user the ruby and gemset they are using in green
     else printf "%b" "Using: $GEM_HOME
 " # don't use colors in non-interactive shells
