--- a/NSAttributedStringDemo/NSAttributedStringDemo/Supporting Files/NSAttributedStringDemo-Info.plist
+++ b/NSAttributedStringDemo/NSAttributedStringDemo/Supporting Files/NSAttributedStringDemo-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.futureworkshops.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.futureworkshops.nsattrib-string-sample</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
